# Binance-CPP-Library

./: CMakeLists.txt  CMakeListsTorch.txt  LICENSE  README.md
Connection/private/: Connection.cpp
Connection/public/: Connection.hpp
OrderBook/private/: OrderBook.cpp
OrderBook/public/: OrderBook.hpp
TestApp/: main.cpp
